@@ -1,6 +1,17 @@
 ﻿以下功能最近几个月别想用了：
 1、出兵
 
+-= Stran 1.2.6 [Nikola Tesla] 发布 =-
+- 在option中加入autorun=true，可在启动程序后自动登录所有账号，请谨慎使用 (感谢ss0628)
+- 修正了拆除和平仓的探测问题(要求测试) (感谢chihsun和lovermagic)
+- 修正了酿酒厂和古罗马的基本面数据，新增了部分建造依赖数据(要求广泛测试) (感谢chihsun)
+- 修正了部分语言文本的探测问题 (感谢chihsun)
+- 修正了粮食和仓库不符合建造要求时的探测问题(要求广泛测试) (感谢chihsun)
+- 修正了账号无法删除的问题 (感谢chihsun)
+- 添加了繁体中文的服务器和客户端语言包 (感谢chihsun)
+- 添加了造兵时强制显示所有兵种的选项，请勿滥用以免发生危险
+- 电脑使用了交流电 (感谢尼古拉·特斯拉)
+
 -= Stran 1.2.5 [GoldenFox] 发布 =-
 - 修正了运输探测的问题 (感谢firefox)
 - 修正了派对和研发升级探测的问题 (感谢chihsun)
